--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "electron.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "electron electron.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -38,6 +39,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.0"
+    "vite": "^6.3.0",
+    "electron": "^30.0.0"
   }
 }
